benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-safe016_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe016_power.opt.yml/safe016_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe016_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c
Compilation started
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c: In function ‘P2’:
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c:626:19: error: ‘FALSE’ undeclared (first use in this function)
  626 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c:626:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c: In function ‘main’:
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c:730:19: error: ‘FALSE’ undeclared (first use in this function)
  730 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_r160kpqb/tmp/tmpnv6q8jxo.c:741:19: error: ‘TRUE’ undeclared (first use in this function)
  741 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
